fix(LeaderboardTableStyles): apply white-space nowrap to wallet column

--- a/src/styles/pages/_leaderboard.scss
+++ b/src/styles/pages/_leaderboard.scss
@@ -12,6 +12,7 @@
     }
   }
 
+  &__wallet,
   &__volume,
   &__liquidity {
     white-space: nowrap;
